# discograph

./: .env  .gitignore  DEPLOYMENT_NOTES.md  README.md  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: master_discograph.yml
discograph/: .gitignore  Gruntfile.js  __init__.py  api.py  app.py  cache_manager.py  config.py  database.py  decorators.py  devapp.py  exceptions.py  helpers.py  loader.py  logging.py  logging_config.py  package.json  ui.py  updater.py  utils.py
discograph/data_instruments/: aerophones.csv  chordophones.csv  electrophones.csv  hornbostelSachs.json  idiophones.csv  membranophones.csv
discograph/data_role/: acting_literary_and_spoken.csv  companies.csv  conducting_and_leading.csv  dj_mix.csv  featuring_and_presenting.csv  instruments.csv  management.csv  production.csv  relation.csv  remix.csv  technical.csv  visual.csv  vocal.csv  writing_and_arrangement.csv
discograph/docs/: ABOUT.md  notes.md
discograph/instruments/: aerophones.csv  idiophones.csv  membranophones.csv
discograph/source/css/: discograph.less
discograph/source/js/: color.js  fsm.js  (+6 more)
discograph/static/: site.webmanifest
discograph/templates/: alert.html  error.html  index.html  modal-help.html  modal-welcome.html  modal-what.html  modal-who.html  nav-bottom.html  nav-top.html  offline.html
discograph/test/: test_api.py  test_ui.py
tests/: app_test_case.py  test_api.py  test_ui.py
tests/data_roles/: test_data_roles.tsv  test_data_roles_normalised.tsv
tests/instruments/: test_instruments.txt
tests/integration/: app_test_case.py  loader_test_case.py  test_api.py  test_loader.py  test_task_runner.py  test_ui.py  test_updater.py  test_utils.py  updater_test_case.py
tests/unit/: test_configuration.py  test_utils.py
(+14 files in other folders)
